--- a/Views/Shared/Common/_B2BLink.cshtml
+++ b/Views/Shared/Common/_B2BLink.cshtml
@@ -3,6 +3,6 @@
 @if(Model != null && Model.StatusB2B)
 {
     <div class="item">
-        <a href="/customer/loginB2B" title="Área Restrita"><i class="lock icon"></i> <span class="text">Área Restrita</span></a>
+        <a href="/customer/loginB2B" title="Área Restrita"><i class="area-restrita icon"></i> <span class="text">Área Restrita</span></a>
     </div>
 }
