--- a/resources/sass/default/product/_product_card.scss
+++ b/resources/sass/default/product/_product_card.scss
@@ -271,7 +271,9 @@
                             }
 
                             &.active {
-                                border: 2px solid #000000 !important;
+                                color: #000;
+                                border: 2px solid #000 !important;
+                                background: #fff;
                                 font-weight: normal;
                             }
 
